# controllers/tasks.go
@@ -6,6 +6,7 @@ import (
 	"taskflow-samrat/services"
 
 	"github.com/gin-gonic/gin"
+	"github.com/go-playground/validator/v10"
 	"github.com/sirupsen/logrus"
 )
 
@@ -14,14 +15,22 @@ import (
 // @Accept json
 // @Produce json
 // @Param Authorization header string true "Authorization Header"
+// @Param projectId path string true "Project ID"
 // @Param payload body models.CreateAndUpdateTaskReq true "Create Task Payload"
 // @Success 200 {object} apihelpers.ApiResponse
 // @Failure 400 {object} apihelpers.ApiResponse
 // @Failure 500 {object} apihelpers.ApiResponse
-// @Router /projects/:projectId/tasks [post]
+// @Router /projects/{projectId}/tasks [post]
 func CreateTaskUsingProjectId(c *gin.Context) {
 	cRH, _ := c.Get("reqH")
 	reqH := cRH.(models.RequestHeader)
+
+	projectId := c.Param("projectId")
+	if projectId == "" {
+		logrus.Error("project id is required", " | reqId: "+reqH.ReqId)
+		apihelpers.SendBadRequestFromController(c, "Project id is required")
+		return
+	}
 
 	var task models.CreateAndUpdateTaskReq
 	if err := c.ShouldBindJSON(&task); err != nil {
@@ -29,7 +38,15 @@ func CreateTaskUsingProjectId(c *gin.Context) {
 		apihelpers.SendBadRequestFromController(c, "Invalid request payload")
 		return
 	}
-	code, res := services.CreateTaskUsingProjectId(task, reqH.UserId)
+
+	validator := validator.New()
+	if err := validator.Struct(task); err != nil {
+		logrus.Error("failed to validate payload : "+err.Error(), " | reqId: "+reqH.ReqId)
+		apihelpers.SendBadRequestFromController(c, "Invalid request payload")
+		return
+	}
+
+	code, res := services.CreateTaskUsingProjectId(task, projectId, reqH.UserId)
 	apiName := "/projects/:projectId/tasks [POST]"
 	apihelpers.CustomResponse(c, code, res, apiName)
 }
@@ -45,7 +62,7 @@ func CreateTaskUsingProjectId(c *gin.Context) {
 // @Success 200 {object} apihelpers.ApiResponse
 // @Failure 400 {object} apihelpers.ApiResponse
 // @Failure 500 {object} apihelpers.ApiResponse
-// @Router /projects/:projectId/tasks [get]
+// @Router /projects/{projectId}/tasks [get]
 func GetAllTasksByProjectId(c *gin.Context) {
 	cRH, _ := c.Get("reqH")
 	reqH := cRH.(models.RequestHeader)
@@ -67,7 +84,7 @@ func GetAllTasksByProjectId(c *gin.Context) {
 // @Success 200 {object} apihelpers.ApiResponse
 // @Failure 400 {object} apihelpers.ApiResponse
 // @Failure 500 {object} apihelpers.ApiResponse
-// @Router /tasks/:taskId [get]
+// @Router /tasks/{taskId} [get]
 func GetTaskById(c *gin.Context) {
 	cRH, _ := c.Get("reqH")
 	reqH := cRH.(models.RequestHeader)
@@ -84,11 +101,11 @@ func GetTaskById(c *gin.Context) {
 // @Produce json
 // @Param Authorization header string true "Authorization Header"
 // @Param taskId path string true "Task ID"
-// @Param payload body models.CreateAndUpdateTaskReq true "Update Task Payload"
+// @Param request body models.CreateAndUpdateTaskReq true "Update Task Payload"
 // @Success 200 {object} apihelpers.ApiResponse
 // @Failure 400 {object} apihelpers.ApiResponse
 // @Failure 500 {object} apihelpers.ApiResponse
-// @Router /tasks/:taskId [patch]
+// @Router /tasks/{taskId} [patch]
 func UpdateTaskById(c *gin.Context) {
 	cRH, _ := c.Get("reqH")
 	reqH := cRH.(models.RequestHeader)
@@ -100,6 +117,20 @@ func UpdateTaskById(c *gin.Context) {
 		apihelpers.SendBadRequestFromController(c, "Invalid request payload")
 		return
 	}
+
+	if taskId == "" {
+		logrus.Error("task id is required", " | reqId: "+reqH.ReqId)
+		apihelpers.SendBadRequestFromController(c, "Task id is required")
+		return
+	}
+
+	validator := validator.New()
+	if err := validator.Struct(task); err != nil {
+		logrus.Error("failed to validate payload : "+err.Error(), " | reqId: "+reqH.ReqId)
+		apihelpers.SendBadRequestFromController(c, "Invalid request payload")
+		return
+	}
+
 	code, res := services.UpdateTaskById(taskId, task, reqH.UserId)
 	apiName := "/tasks/:taskId [PATCH]"
 	apihelpers.CustomResponse(c, code, res, apiName)
@@ -114,12 +145,18 @@ func UpdateTaskById(c *gin.Context) {
 // @Success 200 {object} apihelpers.ApiResponse
 // @Failure 400 {object} apihelpers.ApiResponse
 // @Failure 500 {object} apihelpers.ApiResponse
-// @Router /tasks/:taskId [delete]
+// @Router /tasks/{taskId} [delete]
 func DeleteTaskById(c *gin.Context) {
 	cRH, _ := c.Get("reqH")
 	reqH := cRH.(models.RequestHeader)
 
 	taskId := c.Param("taskId")
+	if taskId == "" {
+		logrus.Error("task id is required", " | reqId: "+reqH.ReqId)
+		apihelpers.SendBadRequestFromController(c, "Task id is required")
+		return
+	}
+
 	code, res := services.DeleteTaskById(taskId, reqH.UserId)
 	apiName := "/tasks/:taskId [DELETE]"
 	apihelpers.CustomResponse(c, code, res, apiName)
